--- a/css/common.css
+++ b/css/common.css
@@ -41,3 +41,14 @@ button.med-button {
 .action p {
     font-style: italic;
 }
+.desktop-only {
+    display: block;
+}
+@media only screen and (max-width: 600px) {
+    .mobile-only {
+        display: block;
+    }
+    .desktop-only {
+        display: none;
+    }
+}
