--- a/css/index.css
+++ b/css/index.css
@@ -81,6 +81,7 @@ header {
     position: absolute;
     top: 0;
     z-index: -99;    
+    width: 100%;
 }
 .special-container {
     transform: rotate(-4.14deg);
