--- a/css/index.css
+++ b/css/index.css
@@ -324,9 +324,13 @@ header {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 35px;
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     color: #233A5A;
+    background-image: url(../images/faq-mask.png);
+    background-repeat: no-repeat;
+    background-position-x: 49%;
+    background-position-y: 2px;
 }
 .faq-wrap .heading h3 span {
     color: #F7931E;
@@ -389,9 +393,13 @@ header {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 35px;
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 35px;
+    padding-bottom: 35px;
     color: #233A5A;
+    background-image: url(../images/why-us-mask.png);
+    background-repeat: no-repeat;
+    background-position-x: 49%;
+    background-position-y: -3px;
 }
 .why-us .heading h3 span {
     color: #F7931E;
