--- a/css/index.css
+++ b/css/index.css
@@ -414,6 +414,7 @@ header {
     float: left;
     text-align: center;
     margin-bottom: 80px;
+    max-width: 48%;
 }
 .why-us .parent .item .icon {
     display: inline-block;
