--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -194,7 +194,7 @@ footer {
     padding-left: 20px;
     padding-top: 20px;
 }
-.add-users-wrap .step h3 {
+.add-users-wrap .step h3, .dashboard-step-3 .header h3, .dashboard-step-4 .header h3, .upcoming-orders h3{
     font-size: 18px;
     padding: 15px;
     padding-bottom: 10px;
@@ -213,3 +213,97 @@ footer {
     font-weight: 500;
     padding-left: 15px;
 }
+
+/* dashboard step 3 */
+.ordering-wrap {
+    padding-left: 20px;
+}
+.order-wrap {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.order-wrap .tiles-wrap {
+    overflow-y: auto;
+}
+.order-wrap .tiles-wrap .tile {
+    float: left;
+    border: 1px solid #ccc;
+    margin-right: 20px;
+    border-radius: 5px;
+    background:#f4f4f4;
+}
+.order-wrap .tiles-wrap .tile h3 {
+    margin-top: 15px;
+    font-weight: 500;
+    font-size: 20px;
+}
+.order-wrap .tiles-wrap .tile p {
+    font-weight: 500;
+    font-size: 16px;
+}
+.f-l {
+    float: left;
+}
+.dish-name , .quantity, .down {
+    font-size: 18px;
+    font-weight: 500;
+    text-align: left;
+}
+.order,.top, .new-order-wrap {
+    padding: 0;
+    margin: 0;
+}
+.upcoming-orders .action-wrap button {
+    width: auto;
+    margin-right: 20px;
+    margin-bottom: 0;
+}
+.down {
+    font-size: 16px;
+}
+.new-order-act {
+    padding-left: 20px;
+}
+.new-order-act button {
+    width: 200px;
+}
+.new-order-wrap .date input {
+    width: 100%;
+    height: 38px;
+}
+.new-order-wrap .small-button, .approve-item .small-button {
+    width:auto;
+    padding: 0px 10px;
+}
+.new-order-wrap .plan .f-input-small {
+    width: 45%;
+    margin-right: 2%;
+}
+.new-order-wrap select {
+    width: 100%;
+    padding: 6px 15px;
+    border-radius: 3px;
+}
+/* dashboard step 3 ends */
+/* dashboard step 4 */
+.approve-users-wrap {
+    padding-left: 20px;
+}
+.approve-users-wrap .approve-header .item {
+    font-weight: 500;
+    font-size: 18px;
+}
+.approve-users-wrap .approve-header {
+    margin-bottom: 15px;
+}
+.approve-users-wrap .action-wrap-app {
+    width: 60%;
+    margin: 20px auto
+}
+.approve-users-wrap .action-wrap-app button {
+    margin-right: 30px;
+    width:auto;
+    padding: 0px 50px;
+}
+/* dashboard step 4 ends*/
