--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 /* header css start */
@@ -12,12 +13,13 @@ header {
     width: 90%;
     margin: 0 auto;
 }
-.header-left-wrap, .header-right-wrap {
-    width:49%;
+.header-left-wrap,
+.header-right-wrap {
+    width: 49%;
     display: inline-block;
     box-sizing: border-box;
 }
-.header-left-wrap{
+.header-left-wrap {
     padding-top: 7px;
     padding-bottom: 7px;
 }
@@ -32,7 +34,7 @@ header {
 /* Copyright css starts */
 
 .copyright {
-    background-color: #1A2B4E;
+    background-color: #1a2b4e;
     color: #fff;
     text-align: center;
 }
@@ -56,16 +58,18 @@ button.med-button {
     line-height: 91%;
     text-align: center;
     letter-spacing: -0.576517px;
-    color: #FFFFFF;
+    color: #ffffff;
     text-transform: uppercase;
-    background: linear-gradient(90deg, #1E8FF7 0%, #24B3F1 93.32%);
+    background: linear-gradient(90deg, #1e8ff7 0%, #24b3f1 93.32%);
     box-shadow: 0px 15px 25px rgba(28, 87, 174, 0.33);
     border-radius: 5px;
     border: none !important;
     margin-bottom: 20px;
 }
 
-.clr {clear: both;}
+.clr {
+    clear: both;
+}
 footer {
     position: fixed;
     bottom: 0;
@@ -106,11 +110,9 @@ footer {
     line-height: 91%;
     text-align: center;
     letter-spacing: -0.576517px;
-    color: #FFFFFF;
+    color: #ffffff;
     text-transform: uppercase;
-    background: linear-gradient(
-90deg
-, #1E8FF7 0%, #24B3F1 93.32%);
+    background: linear-gradient(90deg, #1e8ff7 0%, #24b3f1 93.32%);
     box-shadow: 0px 15px 25px rgb(28 87 174 / 33%);
     border-radius: 5px;
     border: none !important;
@@ -128,14 +130,16 @@ footer {
     align-items: center;
     justify-content: center;
 }
-.container-left, .container-right {
+.container-left,
+.container-right {
     float: left;
     margin-top: 20px;
     border: 1px solid #ccc;
     padding: 20px;
     margin-right: 20px;
 }
-.action, .separator {
+.action,
+.separator {
     text-align: center;
 }
 .separator {
@@ -158,7 +162,7 @@ footer {
     float: left;
     margin: 0;
     padding: 0;
-    background: #2C3B41;
+    background: #2c3b41;
     height: 100vh;
 }
 .dashboard-right {
@@ -169,7 +173,7 @@ footer {
     padding: 0;
 }
 .user-wrapper {
-    background-color:#222D32;
+    background-color: #222d32;
     color: #fff;
     padding-top: 15px;
     padding-bottom: 3px;
@@ -178,27 +182,35 @@ footer {
 }
 .sidebar ul {
     margin: 0;
+    padding: 0;
+    margin-top: 20px;
 }
 .sidebar ul li {
     list-style-type: none;
     list-style-image: none;
-    padding: 10px 0px;
 }
 .sidebar ul li a {
     text-decoration: none;
     font-size: 18px;
     font-weight: 500;
     color: #fff;
+    display: block;
+    padding: 10px;
+    width: 100%;
+    padding-left: 40px;
 }
 .add-users-wrap {
     padding-left: 20px;
     padding-top: 20px;
 }
-.add-users-wrap .step h3, .dashboard-step-3 .header h3, .dashboard-step-4 .header h3, .upcoming-orders h3{
+.add-users-wrap .step h3,
+.dashboard-step-3 .header h3,
+.dashboard-step-4 .header h3,
+.upcoming-orders h3 {
     font-size: 18px;
     padding: 15px;
     padding-bottom: 10px;
-    color: #222D32;
+    color: #222d32;
 }
 .upload-wrap {
     padding-left: 15px;
@@ -208,7 +220,7 @@ footer {
 }
 .add-rows {
     text-decoration: underline !important;
-    color: #222D32;
+    color: #222d32;
     font-size: 18px;
     font-weight: 500;
     padding-left: 15px;
@@ -231,7 +243,7 @@ footer {
     border: 1px solid #ccc;
     margin-right: 20px;
     border-radius: 5px;
-    background:#f4f4f4;
+    background: #f4f4f4;
 }
 .order-wrap .tiles-wrap .tile h3 {
     margin-top: 15px;
@@ -245,12 +257,16 @@ footer {
 .f-l {
     float: left;
 }
-.dish-name , .quantity, .down {
+.dish-name,
+.quantity,
+.down {
     font-size: 18px;
     font-weight: 500;
     text-align: left;
 }
-.order,.top, .new-order-wrap {
+.order,
+.top,
+.new-order-wrap {
     padding: 0;
     margin: 0;
 }
@@ -272,8 +288,9 @@ footer {
     width: 100%;
     height: 38px;
 }
-.new-order-wrap .small-button, .approve-item .small-button {
-    width:auto;
+.new-order-wrap .small-button,
+.approve-item .small-button {
+    width: auto;
     padding: 0px 10px;
 }
 .new-order-wrap .plan .f-input-small {
@@ -299,11 +316,32 @@ footer {
 }
 .approve-users-wrap .action-wrap-app {
     width: 60%;
-    margin: 20px auto
+    margin: 20px auto;
 }
 .approve-users-wrap .action-wrap-app button {
     margin-right: 30px;
-    width:auto;
+    width: auto;
     padding: 0px 50px;
 }
 /* dashboard step 4 ends*/
+.dashboard-step-1,
+.dashboard-step-2,
+.dashboard-step-3,
+.dashboard-step-4 {
+    display: none;
+}
+.active-step {
+    display: block;
+}
+.nav-menu-side.active {
+    background: #222d32;
+    border-bottom: 1px solid #fff;
+    padding: 10px;
+    width: 100%;
+    display: block;
+    padding-left: 40px;
+}
+.d-s {
+    overflow-x: auto;
+    max-height: 80vh;
+}
