--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -102,11 +102,11 @@ footer {
 }
 
 .small-button {
-    width: 40.2px;
-    height: 38.86px;
+    width: 36px;
+    height: 35px;
     font-style: normal;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 91%;
     text-align: center;
     letter-spacing: -0.576517px;
@@ -210,6 +210,7 @@ footer {
     font-size: 18px;
     padding: 15px;
     padding-bottom: 10px;
+    padding-left: 0;
     color: #222d32;
 }
 .upload-wrap {
@@ -259,7 +260,8 @@ footer {
 }
 .dish-name,
 .quantity,
-.down {
+.down,
+.action-wrap {
     font-size: 18px;
     font-weight: 500;
     text-align: left;
@@ -278,23 +280,30 @@ footer {
 .down {
     font-size: 16px;
 }
-.new-order-act {
-    padding-left: 20px;
-}
+
 .new-order-act button {
-    width: 200px;
+    width: 130px;
+    height: 40px;
 }
 .new-order-wrap .date input {
     width: 100%;
     height: 38px;
+}
+.new-order-wrap input,
+.new-order-wrap select {
+    margin-top: 20px;
+}
+.new-order-wrap button {
+    margin-top: 10px;
 }
 .new-order-wrap .small-button,
 .approve-item .small-button {
     width: auto;
     padding: 0px 10px;
 }
-.new-order-wrap .plan .f-input-small {
-    width: 45%;
+.new-order-wrap .plan .f-input-small,
+.new-order-wrap .quantity .f-input-small {
+    width: 100%;
     margin-right: 2%;
 }
 .new-order-wrap select {
@@ -344,4 +353,82 @@ footer {
 .d-s {
     overflow-x: auto;
     max-height: 80vh;
+}
+.otp-wrap {
+    padding-left: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 30px;
+}
+.logo img {
+    height: 30px;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+    background: transparent;
+    bottom: 0;
+    color: transparent;
+    cursor: pointer;
+    height: auto;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: auto;
+}
+.order-wrap .order,
+.new-order-wrap {
+    border: 1px solid #ddd;
+    width: 70%;
+}
+.order-wrap .header {
+    border-bottom: 1px solid #ddd;
+}
+.order-wrap .order .top {
+    display: flex;
+}
+.order .dish-name {
+    width: 30%;
+}
+.order .dish-name,
+.order .quantity,
+.order .action-wrap {
+    width: 30%;
+    padding: 12px 25px;
+}
+.order .quantity {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+}
+.order .f-l {
+    font-size: 14px;
+    font-weight: 500;
+}
+.order .f-l p {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    font-weight: 500;
+}
+.order .dish-name {
+    width: 30%;
+}
+.date,
+.plan,
+.quantity,
+.office-wrap,
+.action {
+    font-size: 14px;
+    font-weight: 500;
+    padding: 12px 25px;
+    width: 20%;
+    border-right: 1px solid #ddd;
+}
+.new-order-wrap .small-button {
+    width: 100%;
+    height: 50px;
+    line-height: 20px;
+}
+.new-order-wrap {
+    border-bottom: 1px solid #ddd;
+    display: flex;
 }
