--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -269,7 +269,8 @@ footer {
 }
 .order,
 .top,
-.new-order-wrap {
+.new-order-wrap,
+.new-order-header {
     padding: 0;
     margin: 0;
 }
@@ -371,7 +372,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: auto;
 }
 .order-wrap .order,
-.new-order-wrap {
+.new-order-wrap,
+.new-order-header {
     border: 1px solid #ddd;
     width: 70%;
 }
