--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -499,3 +499,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .show-only {
     border: none;
 }
+.login-in-w .action {
+    width: 100%;
+    border: none;
+}
