--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -503,3 +503,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: 100%;
     border: none;
 }
+.container-left {
+    margin-top: 0;
+    padding-top: 0;
+}
