--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -54,14 +54,14 @@ button.med-button {
     height: 48.86px;
     font-style: normal;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 91%;
     text-align: center;
     letter-spacing: -0.576517px;
     color: #ffffff;
-    text-transform: uppercase;
-    background: linear-gradient(90deg, #4285f4 0%, #2098F6 93.32%);
-    box-shadow: 0px 5px 5px rgba(28, 87, 174, 0.43);
+    //text-transform: uppercase;
+    background: #3c8dbc;//linear-gradient(90deg, #4285f4 0%, #2098F6 93.32%);
+    //box-shadow: 0px 5px 5px rgba(28, 87, 174, 0.43);
     border-radius: 5px;
     border: none !important;
     margin-bottom: 20px;
@@ -118,14 +118,14 @@ footer {
     height: 35px;
     font-style: normal;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 91%;
     text-align: center;
     letter-spacing: -0.576517px;
     color: #ffffff;
-    text-transform: uppercase;
-    background: linear-gradient(90deg, #4285f4 0%, #2098F6 93.32%);
-    box-shadow: 0px 5px 5px rgba(28, 87, 174, 0.43);
+    //text-transform: uppercase;
+    background: #3c8dbc;//linear-gradient(90deg, #4285f4 0%, #2098F6 93.32%);
+    //box-shadow: 0px 5px 5px rgba(28, 87, 174, 0.43);
     border-radius: 5px;
     border: none !important;
     margin-bottom: 20px;
@@ -485,7 +485,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     margin-bottom: 0;
 }
 .action-wrap-app .reject {
-    background: linear-gradient(90deg, #cc4001 0%, #cc4002 93.32%);
+    background: #dd4b39;//linear-gradient(90deg, #cc4001 0%, #cc4002 93.32%);
+}
+.success {
+    background: #398439;
+}
+.failure {
+    background: #dd4b39;
 }
 .add-user-header,
 .add-user {
