--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -605,7 +605,9 @@ footer {
     background-color: #b9e3fb !important;
     opacity: 0.8;
 }
-.add-user .item label {
+.add-user .item label,
+.approve-item .item label,
+.approve-item .item-ch label {
     display: none;
 }
 
@@ -766,12 +768,36 @@ footer {
         width: 70%;
         margin-left: 8px;
     }
-    .add-user .item label {
+    .add-user .item label,
+    .approve-item .item label,
+    .approve-item .item-ch label {
         display: inline-block;
         width: 25%;
         padding: 15px 10px;
         background: #b9e3fb;
         margin-bottom: 0;
+    }
+    .approve-header {
+        display: none;
+    }
+    .approve-item .item,
+    .approve-item .item-ch {
+        border-bottom: 1px solid #ddd;
+        padding-top: 0;
+        padding-bottom: 0;
+        text-align: left;
+        padding-left: 0;
+    }
+    .approve-item .item label,
+    .approve-item .item-ch label {
+        margin-right: 20px;
+    }
+    .approve-item .item-ch label {
+        width: 24.8%;
+    }
+    .approve-users-wrap .action-wrap-app {
+        margin-bottom: 100px;
+        width: 100%;
     }
 }
 @media only screen and (min-width: 767px) {
