--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -612,6 +612,12 @@ footer {
 .new-order label {
     display: none;
 }
+.datepicker {
+    background-image: url("../images/calendar.png");
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-position: 97%;
+}
 
 @media only screen and (max-width: 767px) {
     .sidebar {
