--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -563,9 +563,10 @@ footer {
     padding-top: 0;
 }
 .chart-container {
-    height: 500px !important;
-    width: 500px !important;
+    height: auto;
+    width: auto;
     margin-left: 30px;
+    margin-bottom: 30px;
 }
 .analytics-main-wrap {
     width: 70%;
