--- a/adminPortal/css/index.css
+++ b/adminPortal/css/index.css
@@ -920,6 +920,24 @@ footer {
     .upload-wrap {
         width: 80%;
     }
+    .new-order-header .date,
+    .new-order-wrap .date,
+    .new-order-header .plan,
+    .new-order-wrap .plan,
+    .new-order-header .quantity,
+    .new-order-wrap .quantity,
+    .new-order-header .office-wrap,
+    .new-order-wrap .office-wrap {
+        float: none !important;
+        display: inline-block;
+        width: 30% !important;
+    }
+    .new-order-header .action,
+    .new-order-wrap .action {
+        float: none !important;
+        display: inline-block;
+        width: 15% !important;
+    }
 }
 @media only screen and (min-width: 767px) {
     .items.mobile-only {
@@ -976,4 +994,24 @@ footer {
 .new-order-wrap:nth-child(odd),
 .add-user:nth-child(odd) {
     background-color: #fafafa;
+}
+.color-one {
+    background-color: #3c8391;
+    color: #fff;
+}
+.color-two {
+    background-color: #217c3d;
+    color: #fff;
+}
+.color-three {
+    background-color: #956a2f;
+    color: #fff;
+}
+.color-four {
+    background-color: #a0565d;
+    color: #fff;
+}
+.color-five {
+    background-color: #299c79;
+    color: #fff;
 }
