--- a/css/getStarted.css
+++ b/css/getStarted.css
@@ -37,3 +37,141 @@
     width: 100%;
     height: 28vh;
 }
+
+.footer-main-wrap.steps {
+    background: #fff;
+    border-top: 1px solid #ccc;
+}
+
+/* get started steps */
+
+.container-steps-wrap {
+    position: relative;
+}
+
+.menu-building-options {
+    width: 75%;
+    margin: 5% auto 0;
+    border-radius: 5px;
+    text-align: center;
+    background: #ffffff;
+    box-shadow: 0px 6.80462px 34.0231px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    display: none;
+}
+
+.menu-building-options .step-count p,
+.menu-building-options .step-description p {
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+}
+.menu-building-options .step-header {
+    margin-top: 20px;
+}
+.menu-building-options .step-header h3 {
+    font-size: 26px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 0.4px;
+}
+.menu-building-options .step-description {
+    margin-top: 30px;
+}
+.menu-building-options .step-actions {
+    margin-top: 45px;
+    margin-bottom: 45px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.menu-building-options .step-actions .actions {
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.menu-building-options .step-actions button {
+    height: 74px;
+    width: 255px;
+    color: #333;
+    font-weight: 500;
+    font-size: 14px;
+    border-radius: 7px;
+    margin-right: 30px;
+    border: none;
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding-top: 10px;
+    padding-left: 50px;
+}
+.prev {
+    position: absolute;
+    left: 0;
+    padding-left: 18px;
+    padding-top: 14px;
+    top: 40%;
+    left: 10%;
+}
+.next {
+    position: absolute;
+    right: 0;
+    padding-left: 10px;
+    padding-top: 14px;
+    top: 40%;
+    right: 10%;
+}
+.prev,
+.next {
+    width: 50px;
+    height: 50px;
+    background: linear-gradient(90deg, #1e8ff7 0%, #24b3f1 93.32%);
+    border-radius: 50%;
+}
+.prev a {
+    border-right: 2px solid;
+    border-bottom: 2px solid;
+    height: 20px;
+    width: 20px;
+    transform: rotate(135deg);
+    display: block;
+    color: #fff;
+}
+.next a {
+    border-right: 2px solid;
+    border-bottom: 2px solid;
+    height: 20px;
+    width: 20px;
+    transform: rotate(-45deg);
+    display: block;
+    color: #fff;
+}
+
+.footer-main-wrap.steps {
+    box-shadow: 0px 6.80462px 34.0231px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+.footer-main-wrap.steps .footer-steps-wrap {
+    display: flex;
+    flex-basis: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.footer-main-wrap.steps .footer-steps-wrap .step {
+    background: #ccc;
+    height: 13px;
+    width: 110px;
+    margin-right: 20px;
+    border-radius: 20px;
+}
+.footer-main-wrap.steps .footer-steps-wrap .step.step-done {
+    background-color: #93278f;
+}
