--- a/css/getStarted.css
+++ b/css/getStarted.css
@@ -114,7 +114,7 @@
     left: 0;
     padding-left: 18px;
     padding-top: 14px;
-    top: 40%;
+    top: 200px;
     left: 10%;
 }
 .next {
@@ -122,7 +122,7 @@
     right: 0;
     padding-left: 10px;
     padding-top: 14px;
-    top: 40%;
+    top: 200px;
     right: 10%;
 }
 .prev,
