--- a/css/backgroundImage.css
+++ b/css/backgroundImage.css
@@ -97,3 +97,52 @@
 .extra {
     background: url("../images/extra.png");
 }
+.food-delivery {
+    background-color: #24b3f1;
+}
+.protein-pref {
+    background-color: #ffe715;
+}
+.portion-size {
+    background-color: #fdb853;
+}
+.ror-mains {
+    background-color: #d23e5f;
+    display: block !important;
+}
+.veg-days {
+    background-color: #acd56d;
+}
+.cuisine-pref {
+    background-color: #8849ba;
+}
+.ror-mains .roti-img {
+    position: absolute;
+    top: 5x;
+    right: 8px;
+}
+.ror-mains .rice-img {
+    position: absolute;
+    top: 35px;
+    left: 16px;
+}
+.change-preferences .action a,
+.change-preferences .meal-options .option .meal-sub-wrap a {
+    background: url("../images/edit-icon.png");
+    background-repeat: no-repeat;
+    padding-left: 20px;
+    background-size: 20px;
+}
+
+.breakfast-tile {
+    background-color: #24b3f1;
+}
+.dinner-tile {
+    background-color: #d23e5f;
+}
+.snacks-tile {
+    background-color: #ff9c72;
+}
+.lunch-tile {
+    background-color: #fdb853;
+}
