--- a/css/getStarted.css
+++ b/css/getStarted.css
@@ -150,11 +150,388 @@
     display: block;
     color: #fff;
 }
+.head {
+    text-align: center;
+    padding-top: 40px;
+}
+.head h3 {
+    font-size: 26px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 0.4px;
+}
+.head h4 {
+    font-size: 20px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 0.4px;
+}
+.head p {
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+    color: #d23e5f;
+    padding-top: 15px;
+}
+
+/* food summary page css */
+
+.food-summary-container {
+    width: 80%;
+    margin: 5% auto 0;
+    box-shadow: 0px 6.80462px 34.0231px rgba(0, 0, 0, 0.1);
+    background: #fff;
+}
+.food-chosen-steps {
+    width: 85%;
+    margin: 8% auto 0;
+}
+.food-chosen-steps .step-details-ch {
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
+    margin-bottom: 60px;
+    border-radius: 5px;
+    position: relative;
+}
+.step-details-ch .step-icon {
+    width: 8%;
+    position: relative;
+    /* min-width: 140px;
+    height: 140px;
+    border-radius: 50%; */
+}
+.step-details-ch .step-icon .step-icon-in {
+    position: absolute;
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    left: -36px;
+    top: -21px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.step-details-ch .step-details {
+    width: 80%;
+    margin-left: 15%;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.step-details-ch .step-details .text {
+    font-size: 18px;
+    font-weight: 500;
+    width: 35%;
+    padding-left: 30px;
+}
+.step-details-ch .step-details .freq {
+    width: 65%;
+}
+.step-details-ch .step-details .freq ul,
+.clasfi ul {
+    margin: 0;
+    padding: 0;
+}
+.step-details-ch .step-details .freq ul li,
+.clasfi ul li {
+    display: inline-block;
+    list-style: none;
+}
+.step-details-ch .step-details .freq ul li a,
+.clasfi ul li a {
+    font-size: 16px;
+    color: #333;
+    display: block;
+    margin-right: 7px;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
+    padding: 6px 25px;
+    border-radius: 20px;
+}
+
+.seven-days-preview .head p {
+    color: #333;
+}
+
+.seven-days-preview .head h3 span {
+    color: #d23e5f;
+}
+
+.seven-days-preview .days-wrap-in {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.seven-days-preview .days-wrap-in .days-tile {
+    margin-right: 10px;
+    background: #d23e5f;
+    border-radius: 10px;
+    text-align: center;
+    color: #fff;
+    font-weight: 500;
+    width: 97px;
+    height: 107px;
+}
+.seven-days-preview .days-wrap-in .days-tile .date {
+    font-size: 30px;
+    margin-top: 20px;
+}
+.seven-days-preview .days-wrap-in .days-tile .day {
+    font-size: 16px;
+}
+
+.change-preferences {
+    width: 80%;
+    margin: 5% auto 0;
+}
+
+.change-preferences .action {
+    text-align: center;
+}
+
+.change-preferences .action a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+}
+.change-preferences .action p {
+    color: #666;
+    font-size: 14px;
+}
+.change-wrap .head {
+    padding-top: 30px;
+}
+.change-preferences .meal-options .option {
+    width: 25%;
+    padding-right: 15px;
+}
+
+.change-preferences .meal-options .option .image-wr {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.change-preferences .meal-options .option .image-wr img {
+    height: 130px;
+    width: 130px;
+}
+
+.change-preferences .meal-options .option .meal-sub-wrap {
+    border: 1px solid #c4c4c4;
+    border-top: none;
+}
+
+.change-preferences .meal-options .option .meal-sub-wrap h4 {
+    width: 70%;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 5px;
+    float: left;
+    margin: 0;
+}
+.change-preferences .meal-options .option .meal-sub-wrap a {
+    color: transparent;
+    text-decoration: none;
+    padding-left: 0 !important;
+    float: right;
+    margin-top: 5px;
+}
+
+.meal-option-ch {
+    margin-top: 10%;
+}
+
+.meal-option-ch .meal-option-chosen-in {
+    background: #f2f2f2;
+}
+
+.meal-option-ch .meal-option-chosen-in .meal-cat-image {
+    width: 50%;
+}
+.meal-option-ch .meal-option-chosen-in .meal-action-det {
+    width: 50%;
+}
+
+.meal-option-ch .meal-option-chosen-in .meal-action-det .item-detail .head {
+    text-align: left;
+    padding-top: 15px;
+}
+.meal-option-ch .meal-option-chosen-in .meal-action-det .item-detail-cat {
+    margin-top: 60px;
+}
+.meal-option-ch .meal-option-chosen-in .meal-action-det .item-det-portion {
+    margin-top: 30px;
+}
+
+.meal-option-ch .meal-option-chosen-in .meal-action-det .item-detail .head h4 {
+    padding-top: 15px;
+}
+
+.meal-option-ch .meal-option-chosen-in .meal-action-det .item-detail .head p {
+    color: #333;
+    padding-top: 15px;
+}
+
+.clasfi ul {
+    margin: 0;
+    padding: 0;
+}
+.clasfi ul li {
+    list-style: none;
+    display: inline-block;
+}
+.clasfi ul li a {
+    font-size: 14px;
+    border-radius: 10px;
+    background: #fff;
+    padding: 4px 15px;
+}
+
+.clasfi .quan {
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+    color: #333;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 4px;
+}
+
+.clasfi .quantity-wr .subs,
+.clasfi .quantity-wr .value,
+.clasfi .quantity-wr .add {
+    font-size: 16px;
+    font-weight: 500;
+    background: #fff;
+    padding: 4px 15px;
+}
+.clasfi .quantity-wr .subs,
+.clasfi .quantity-wr .add {
+    background: #f7931e;
+    padding: 1px 15px;
+    font-size: 20px;
+    font-weight: bold;
+}
+.clasfi .quantity-wr .subs {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+.clasfi .quantity-wr .add {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.food-summary-container .main-action {
+    text-align: center;
+    margin-top: 80px;
+}
+
+.food-summary-container .main-action button {
+    background: #d23e5f;
+    text-transform: none;
+    letter-spacing: 0.8px;
+    font-size: 22px;
+    margin-bottom: 40px;
+}
+
+.subscription-container {
+    width: 60%;
+    margin: 8% auto 0;
+}
+
+.subscription-container .subscription-tile {
+    width: 30%;
+    background: #ffffff;
+    box-shadow: 0px 6.80462px 34.0231px rgba(0, 0, 0, 0.1);
+    border-radius: 18px;
+    margin-right: 25px;
+    position: relative;
+}
+
+.subscription-container .subscription-tile .recomm {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    width: max-content;
+    left: 0;
+    right: 0;
+    font-weight: 600;
+    font-size: 16px;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    color: #ffffff;
+    background: #f35036;
+    padding: 6px 20px;
+    border-radius: 20px;
+    top: -20px;
+}
+
+.subscription-container .subscription-tile .head h3 {
+    font-size: 80px;
+    color: rgba(138, 62, 138, 0.5);
+}
+
+.subscription-container .subscription-tile .head h4 {
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+    text-transform: capitalize;
+    color: rgba(0, 0, 0, 0.5);
+}
+.subscription-container .subscription-tile .head p {
+    color: rgba(0, 0, 0, 0.5);
+    padding: 0;
+    margin: 0;
+}
+.subscription-container .subscription-tile .head .top-per {
+    position: absolute;
+    left: 18%;
+    color: rgba(138, 62, 138, 0.5);
+}
+.subscription-container .subscription-tile .subscription-action {
+    text-align: center;
+}
+.subscription-container .subscription-tile .subscription-action .select-button {
+    background: rgba(138, 62, 138, 0.37);
+    box-shadow: 0px 15px 25px rgb(28 87 174 / 33%);
+    border-radius: 5px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border: none;
+    color: #fff;
+    height: 40px;
+    width: 70%;
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.subscription-tile.recommended {
+    border: 1px solid #f35036;
+}
+.subscription-tile.recommended .top-per {
+    color: #f35036 !important;
+}
+.subscription-tile.recommended h3 {
+    color: #fd7f0b !important;
+}
+.subscription-tile.recommended h4,
+.subscription-tile.recommended p {
+    color: #000 !important;
+}
+.subscription-tile.recommended button {
+    background: linear-gradient(90deg, #f24e38 0%, #fd7f0b 93.32%) !important;
+    box-shadow: 0px 15px 25px rgba(28, 87, 174, 0.33) !important;
+    border-radius: 5px;
+}
 
 .footer-main-wrap.steps {
     box-shadow: 0px 6.80462px 34.0231px rgba(0, 0, 0, 0.1);
-    position: fixed;
     bottom: 0;
+    position: fixed;
     width: 100%;
     padding-top: 25px;
     padding-bottom: 25px;
