--- a/css/backgroundImage.css
+++ b/css/backgroundImage.css
@@ -146,3 +146,24 @@
 .lunch-tile {
     background-color: #fdb853;
 }
+.subscription-cont-par,
+.auth-container {
+    background-image: url("../images/bg-gs-1.png");
+    background-repeat: no-repeat;
+    width: 100%;
+    background-size: cover;
+    height: auto;
+}
+.google-sign-up button {
+    background-color: #fff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.fb-sign-up button {
+    background-color: #3b579d;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    color: #fff;
+}
+.phone-sign-up button {
+    background-color: #fdb853;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
