--- a/css/common.css
+++ b/css/common.css
@@ -8,6 +8,22 @@
     border-radius: 9px;
     padding: 6px 17px;
 }
+.small-button {
+    width: auto;
+    padding: 10px 15px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 91%;
+    text-align: center;
+    letter-spacing: -0.576517px;
+    color: #ffffff;
+    background: #3c8dbc linear-gradient(90deg, #4285f4 0%, #2098f6 93.32%);
+    box-shadow: 0px 5px 5px rgba(28, 87, 174, 0.43);
+    border-radius: 5px;
+    border: none !important;
+    margin-bottom: 20px;
+}
 
 .clr {
     clear: both;
@@ -65,4 +81,18 @@ button.med-button {
     border-top: 1px solid #c4c4c4;
     width: 80%;
     margin: 10% auto 3%;
+}
+.input-hundred-percent {
+    width: 100%;
+    font-size: 16px;
+    border-radius: 3px;
+    border: 1px solid #c4c4c4;
+    padding: 12px 25px;
+}
+.input-single-length {
+    width: 50px;
+    font-size: 16px;
+    border-radius: 3px;
+    border: 1px solid #c4c4c4;
+    padding: 10px;
 }
