--- a/css/backgroundImage.css
+++ b/css/backgroundImage.css
@@ -167,3 +167,10 @@
     background-color: #fdb853;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+.register-container {
+    background-image: url("../images/bg-gs-1.png");
+    background-repeat: no-repeat;
+    width: 100%;
+    background-size: cover;
+    height: auto;
+}
