--- a/css/common.css
+++ b/css/common.css
@@ -54,6 +54,23 @@ button.med-button {
     border: none !important;
     margin-bottom: 20px;
 }
+button.slim-button {
+    width: 308.2px;
+    height: 30.86px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 91%;
+    text-align: center;
+    letter-spacing: -0.576517px;
+    color: #ffffff;
+    text-transform: uppercase;
+    background: linear-gradient(90deg, #1e8ff7 0%, #24b3f1 93.32%);
+    box-shadow: 0px 15px 25px rgba(28, 87, 174, 0.33);
+    border-radius: 5px;
+    border: none !important;
+    margin-bottom: 20px;
+}
 .action p {
     font-style: italic;
 }
@@ -106,4 +123,7 @@ button.med-button {
 p {
     font-size: 16px;
     font-weight: 500;
+}
+.filler {
+    margin: 30px;
 }
